namespace java bky

struct TestUser{
  1:TestUser user;
  2:string userName;
  3:string password;
  4:string localDateTime;
  5:string date;
  6:string yearMonth;
}